# spacedrive

./: Cargo.toml  pnpm-lock.yaml
apps/desktop/: package.json
apps/desktop/crates/linux/: Cargo.toml
apps/desktop/crates/tauri-plugin-window-state/: Cargo.toml
apps/desktop/src/: commands.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu.rs
apps/server/src/: main.rs
apps/web/: .eslintrc.cjs
core/: Cargo.toml
core/crates/heavy-lifting/: Cargo.toml
core/crates/heavy-lifting/src/job_system/: job.rs
core/crates/prisma-helpers/src/: lib.rs
core/prisma/: schema.prisma
core/src/api/: files.rs
core/src/api/search/: mod.rs
core/src/crypto/: error.rs  keymanager.rs
core/src/location/: mod.rs
core/src/volume/: mod.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/crypto/: aes-256-gcm-siv.rs  xchacha20-poly1305.rs
crates/crypto/benches/hashing/: blake3-kdf.rs
crates/crypto/examples/: file_encryption.rs
crates/crypto/src/: encrypted.rs  error.rs  hashing.rs  primitives.rs  types.rs
crates/crypto/src/crypto/: mod.rs  stream.rs
crates/crypto/src/encoding/: mod.rs
crates/crypto/src/encoding/file/: header.rs  keyslot.rs  mod.rs  object.rs
crates/crypto/src/vault/: persistent.rs
crates/images/: Cargo.toml
crates/prisma/src/: lib.rs
crates/stream-loop/: Cargo.toml
crates/stream-loop/src/: error.rs  lib.rs
crates/sync/: Cargo.toml
crates/sync/example/: Cargo.toml
crates/sync/src/: compressed.rs
crates/utils/: Cargo.toml
interface/locales/en/: common.json
scripts/utils/: patchTauri.mjs
