[package]
name = "sd-images"
version = "0.0.0"
authors = [
	"Jake Robinson <jake@spacedrive.com>",
	"Vítor Vasconcellos <vitor@spacedrive.com>",
]
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[features]
heif = ["dep:libheif-rs", "dep:libheif-sys"]

[dependencies]
image = { workspace = true }
once_cell = { workspace = true }
rspc = { workspace = true, optional = true }                         # error conversion
specta = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

bincode = { version = "2.0.0-rc.3", features = [
	"derive",
	"alloc",
], optional = true }

resvg = "0.40.0"

# both of these added *default* bindgen features
# this broke builds as we build our own liibheif, so i disabled their default features
libheif-rs = { version = "1.0.0", default-features = false, optional = true }
libheif-sys = { version = "2.1.0", default-features = false, optional = true }
pdfium-render = { version = "0.8.18", features = [
	"sync",
	"image",
	"thread_safe",
] }
