[package]
name = "sd-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sd-prisma = { path = "../prisma" }

rspc = { workspace = true }
prisma-client-rust = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
