[package]
name = "sd-desktop-linux"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["fs"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# WARNING: gtk should follow the same version used by tauri
# https://github.com/tauri-apps/tauri/blob/tauri-v2.0.0-beta.12/core/tauri/Cargo.toml#L82
gtk = { version = "0.18.0", features = ["v3_24"] }
