[package]
name = "tauri-plugin-window-state"
publish = false
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2.0.0-beta.12"
thiserror = "1"
log = "0.4"
bincode = "1.3"
bitflags = "2"
